--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "0.12"
+  - "0.10"
 before_install:
-  - "curl -L https://raw.githubusercontent.com/arunoda/travis-ci-laika/master/configure.sh | /bin/sh"
+  - "curl -L http://git.io/3l-rRA | /bin/sh"
 services:
   - mongodb
-env:
+env: 
   - LAIKA_OPTIONS="-t 5000"
